--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-paperless",
   "version": "0.1.0",
-  "description": "",
+  "description": "A N8N community node package for PaperlessNGX",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "paperless"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/waza-ari/n8n-nodes-paperless",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Daniel Herrmann",
+    "email": "danielherrmann@posteo.de"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/waza-ari/n8n-nodes-paperless.git"
   },
   "engines": {
     "node": ">=20.15"
@@ -33,13 +34,10 @@
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
+      "dist/credentials/paperlessNgxApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
-    ]
+      "dist/nodes/PaperlessNgx/PaperlessNgx.node.js"    ]
   },
   "devDependencies": {
     "@typescript-eslint/parser": "~8.32.0",
