feat: add programmatic node to upload document and partial support for document modification

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,15 +13,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '22.x'
           registry-url: 'https://registry.npmjs.org'
-          cache: 'npm'
-      # Using npm instead of pnpm. If a package-lock.json is committed, consider `npm ci` for reproducibility.
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-      - name: Publish
-        run: npm publish --access public
+          cache: 'pnpm'
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run build
+      - run: pnpm publish --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
